style: fix CSS compatibility by adding standard background-clip and backdrop-filter properties

--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,7 @@
             letter-spacing: -0.02em;
             margin-bottom: 12px;
             background: linear-gradient(135deg, #0071e3, #42a5f5);
+            background-clip: text;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
@@ -77,8 +78,8 @@
 
         .glass-card {
             background: var(--card-bg);
-            backdrop-filter: blur(30px);
             -webkit-backdrop-filter: blur(30px);
+            backdrop-filter: blur(30px);
             border-radius: 20px;
             padding: 40px;
             box-shadow: 0 4px 24px rgba(0, 0, 0, 0.08);
